# genplan-template

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
backend/data/ea-logs/json/: ea_run_20251127T191653Z_floor600.json  ea_run_20251127T192749Z_floor365.json  ea_run_20251127T193805Z_floor190.json  ea_run_20251127T194648Z_floor210.json  ea_run_20251127T205705Z-r005_floor967.json  ea_run_20251127T205743Z-r001_floor865.json  (+516 more)
backend/data/rl/: episode_log.jsonl  seed_bandit.json
backend/data/rl-v0/: episode_log.jsonl  seed_bandit.json
backend/rl-training-remote/: train_remote_bandit.py
backend/rl_training_remote/: __init__.py  cli.py  push_ea_data.py  push_rl_data.py  train_remote_ea_eval.py  wipe_ea_logs.py  wipe_rl_memory.py
backend/src/notebooks/: EA_Eval_Compare.ipynb  EA_Eval_Compare_Lrg.ipynb  rl_training_results.ipynb
backend/src/ver0/: constraints.py  evolver.py  fitness.py  grid_encoder.py  mutator.py  real_plan_classifier.py  rl_bandit.py  rl_runner.py  room_memory.py  seeders.py  text_to_support_text.py  vars.py
backend/tests/ver0/: test_constraints.py  test_grid_encoder.py  test_text_to_support_text.py
backend/utils/: data_formater.py  data_loader.py  layout_generation.py  preprocessing_data_extract.py  preprocessing_edge_mask.py  run_full_preprocessing.py
papers/: Mikuliszyn_Mikolaj_EA-RL_Report.tex  README.md  references_EA-RL_Report.bib
utils/: data_formater.py  data_loader.py  pre_processing.py  preprocessing_data_extract.py  preprocessing_data_inspect.py  preprocessing_edge_mask.py
(+2 files in other folders)
