[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genplan-template"
version = "0.1.0"
description = "Template for generative AI floor plan research"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.3.0",
    "huggingface-hub>=1.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyarrow>=22.0.0",
]

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "W503", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
